# 2D-Game-Engine

./: .gitignore  CMakeLists.txt  imgui.ini
Editor/: CMakeLists.txt
Editor/include/: editor_entity.hh  inspector_window.hh  resource_window.hh
Editor/src/: inspector_window.cc  main.cc  resource_window.cc
Engine/: CMakeLists.txt
Engine/cmake/: imgui.cmake
Engine/include/: common.hh  engine.hh  entity.hh  frame.hh  graphics.hh  graphics_system.hh  input.hh  log.hh  math.hh  rect.hh  resource.hh  resource_manager.hh  scene.hh  system.hh  texture.hh  texture_manager.hh  utils.hh  vector.hh  window.hh
Engine/include/components/: box_collider.hh  component.hh  gob.hh  polygon.hh  polygon_collider.hh  position.hh  renderer.hh  rigidbody.hh  rotatable.hh  scale.hh  tag.hh  transform.hh
Engine/include/objects/: camera.hh  object.hh
Engine/include/systems/: collision_system.hh  movement_system.hh  physics_system.hh
Engine/internal/: collision_system.hh  component_manager.hh  graphics_system.hh  movement_system.hh  object_manager.hh  physics_system.hh
Engine/src/: collision_system.cc  engine.cc  graphics.cc  graphics_system.cc  grapics_system.cc  input.cc  log.cc  movement_system.cc  physics_system.cc  resource_manager.cc  resource_manager.cpp  scene.cc  texture.cc  texture_manager.cc  utils.cc  window.cc
GaiyasGame/: CMakeLists.txt  GaiyasGame  Makefile
GaiyasGame/include/: PlayerMovement.hh
GaiyasGame/src/: main.cc
ext/imgui/: CMakeLists.txt
ext/imgui-inspector/: CMakeLists.txt
